--- a/Views/Tablero/Create.cshtml
+++ b/Views/Tablero/Create.cshtml
@@ -33,8 +33,8 @@
         </div>
 
         <div class="contenedor-boton">
-            <button type="submit" class="btn btn-primary">Enviar</button>
-            <a asp-controller="Tablero" class="btn btn-danger" asp-action="Index">
+            <button type="submit" class="btn btn-dark">Enviar</button>
+            <a asp-controller="Tablero" asp-action="Index" class="btn btn-outline-dark">
                 Cancelar
             </a>
         </div>
