--- a/Views/Tablero/Update.cshtml
+++ b/Views/Tablero/Update.cshtml
@@ -38,8 +38,8 @@
 
 
         <div class="contenedor-boton">
-            <button type="submit" class="btn btn-primary">Modificar</button>
-            <a asp-controller="Tablero" asp-action="Index" class="btn btn-danger">
+            <button type="submit" class="btn btn-dark">Modificar</button>
+            <a asp-controller="Tablero" asp-action="Index" class="btn btn-outline-dark">
                 Cancelar
             </a>
         </div>
