--- a/Views/TareasByTablero/UpdateTarea.cshtml
+++ b/Views/TareasByTablero/UpdateTarea.cshtml
@@ -49,9 +49,9 @@
         </div>
 
         <div class="contenedor-boton ">
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-dark">Modificar</button>
             <a asp-controller="TareasByTablero" asp-action="Index" asp-route-idTablero="@Model.Id_tablero"
-                class="btn btn-danger">
+                class="btn btn-black">
                 Cancelar
             </a>
         </div>
