--- a/Views/Usuario/AllUsers.cshtml
+++ b/Views/Usuario/AllUsers.cshtml
@@ -23,7 +23,7 @@
 
     <h2>Listado de todos los usuarios</h2>
     
-    <table class="table table-dark tabla1">
+    <table class="table table-hover2 tabla1">
         <thead>
             <tr class="tabla1-encabezado">
                 <th hidden scope="col">ID</th>
