--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" asp-area="" asp-controller="Home"
+                            <a class="navbar-brand nav-link active" aria-current="page" asp-area="" asp-controller="Home"
                                 asp-action="Index">Inicio</a>
                         </li>
                         @if (!string.IsNullOrEmpty(IsLogged))
@@ -138,7 +138,7 @@
             @RenderBody()
         </main>
     </div>
-
+    
     <footer class="footer text-muted">
         <div>
             &copy; 2023 - Proyecto Kanban - <a asp-area="" asp-controller="Home"
