--- a/Views/Tablero/Index.cshtml
+++ b/Views/Tablero/Index.cshtml
@@ -33,7 +33,7 @@
     else
     {
         <div class="table-responsive">
-            <table class="table table-dark  tabla2">
+            <table class="table table-hover2  tabla2">
                 <thead>
                     <tr class="tabla2-encabezado">
                         <th scope="col" hidden>ID</th>
@@ -70,7 +70,7 @@
                             </td>
                             <td>
                                 <a asp-controller="TareasByTablero" asp-action="Index" asp-route-idTablero="@tablero.Id" title="ver tareas">
-                                    <button type="button" class="btn btn-success">
+                                    <button type="button" class="btn btn-dark">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                             class="bi bi-eye" viewBox="0 0 16 16">
                                             <path
