--- a/Views/Tarea/AllTareas.cshtml
+++ b/Views/Tarea/AllTareas.cshtml
@@ -31,7 +31,7 @@
 
 
     <div class="table-responsive">
-        <table class="table table-dark tabla4">
+        <table class="table table-hover2 tabla4">
             <thead>
                 <tr class="tabla4-encabezado">
                     <th scope="col" hidden>ID</th>
@@ -116,7 +116,7 @@
                                             </select>
                                         </div>
                                         <div class="mx-2">
-                                            <button type="submit" class="btn btn-success">
+                                            <button type="submit" class="btn btn-dark">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                     fill="currentColor" class="bi bi-person-fill-up" viewBox="0 0 16 16">
                                                     <path
