--- a/Views/Tarea/Update.cshtml
+++ b/Views/Tarea/Update.cshtml
@@ -49,8 +49,8 @@
         </div>
 
         <div class="contenedor-boton">
-            <button type="submit" class="btn btn-primary">Modificar</button>
-            <a asp-controller="Tarea" asp-action="Index" class="btn btn-danger">
+            <button type="submit" class="btn btn-dark">Modificar</button>
+            <a asp-controller="Tarea" asp-action="Index" class="btn btn-outline-dark">
                 Cancelar
             </a>
         </div>
