--- a/Views/TareasByTablero/TareasAsignadasByTablero.cshtml
+++ b/Views/TareasByTablero/TareasAsignadasByTablero.cshtml
@@ -30,7 +30,7 @@
     else
     {
         <div class="table-responsive">
-            <table class="table table-dark tabla4">
+            <table class="table table-hover2 tabla4 tareas-asignadas">
                 <thead>
                     <tr class="tabla4-encabezado">
                         <th scope="col" hidden>ID</th>
@@ -67,7 +67,7 @@
                             {
                                 <td>@tarea.Usuario_asignado</td>
                             }
-                            <td>
+                            <td class="actualizar-estado">
                                 <form asp-controller="TareasByTablero" asp-action="UpdateEstadoTareaAsignada" method="post">
                                     <div class="d-flex align-items-center">
                                         <div>
@@ -83,7 +83,7 @@
                                             </select>
                                         </div>
                                         <div class="mx-2">
-                                            <button type="submit" class="btn btn-success">
+                                            <button type="submit" class="btn btn-info">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                     fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
                                                     <path
