--- a/Views/Usuario/Create.cshtml
+++ b/Views/Usuario/Create.cshtml
@@ -2,46 +2,49 @@
 
 @if (Model.TieneMensajeDeError)
 {
-    <div id="mensajeTemporal" class="alert alert-warning">
+    <div id="mensajeTemporal" class="alert alert-warning mensajes-form">
         @Model.MensajeDeError
     </div>
 }
 
-<div class="border border-primary border-3 p-3 rounded contenedor-form">
-    
-    <h2>Crear usuario</h2>
+<div class="prueba">
+    <div class="border border-primary border-3 p-3 rounded contenedor-form">
 
-    <p>Ingrese los siguientes datos:</p>
+        <h2>Crear usuario</h2>
 
-    <form asp-controller="Usuario" asp-action="Create">
-        <div class="mb-3">
-            <label asp-for="@Model.Name"></label>
-            <input asp-for="@Model.Name" class="form-control" />
-            <span asp-validation-for="@Model.Name" class="text-danger"></span>
-        </div>
+        <p>Ingrese los siguientes datos:</p>
 
-        <div class="mb-3">
-            <label asp-for="@Model.Rol"></label>
-            <select asp-for="@Model.Rol"
-                asp-items="Html.GetEnumSelectList<tl2_tp10_2023_EnzoPeralta96.Models.Usuario.RolUsuario>()"
-                class="form-control"></select>
-            <span asp-validation-for="@Model.Rol" class="text-danger"></span>
-        </div>
+        <form asp-controller="Usuario" asp-action="Create">
+            <div class="mb-3">
+                <label asp-for="@Model.Name"></label>
+                <input asp-for="@Model.Name" class="form-control" />
+                <span asp-validation-for="@Model.Name" class="text-danger"></span>
+            </div>
 
-        <div class="mb-3">
-            <label asp-for="@Model.Password"></label>
-            <input asp-for="@Model.Password" class="form-control" />
-            <span asp-validation-for="@Model.Password" class="text-danger"></span>
-        </div>
+            <div class="mb-3">
+                <label asp-for="@Model.Rol"></label>
+                <select asp-for="@Model.Rol"
+                    asp-items="Html.GetEnumSelectList<tl2_tp10_2023_EnzoPeralta96.Models.Usuario.RolUsuario>()"
+                    class="form-control"></select>
+                <span asp-validation-for="@Model.Rol" class="text-danger"></span>
+            </div>
 
-        <div class="contenedor-boton">
-            <button type="submit" class="btn btn-primary">Enviar</button>
-            <a asp-controller="Usuario" asp-action="Index" class="btn btn-danger">
-                Cancelar
-            </a>
-        </div>
-    </form>
+            <div class="mb-3">
+                <label asp-for="@Model.Password"></label>
+                <input asp-for="@Model.Password" class="form-control" />
+                <span asp-validation-for="@Model.Password" class="text-danger"></span>
+            </div>
+
+            <div class="contenedor-boton">
+                <button type="submit" class="btn btn-dark">Enviar</button>
+                <a asp-controller="Usuario" asp-action="Index" class="btn btn-outline-dark">
+                    Cancelar
+                </a>
+            </div>
+        </form>
+    </div>
 </div>
+
 
 
 @section Scripts {
