--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -24,7 +24,7 @@
     <h2>Mi Usuario</h2>
     
     <div class="table-responsive">
-        <table class="table table-dark tabla1">
+        <table class="table table-hover2 tabla1">
             <thead>
                 <tr class="tabla1-encabezado">
                     <th scope="col" hidden>ID</th>
