--- a/Views/Tablero/AddTarea.cshtml
+++ b/Views/Tablero/AddTarea.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "Agregar tarea";
+}
+
 @model ViewModels.CreateTareaViewModels;
 
 <div class="border border-primary border-3 p-3 rounded contenedor-form">
