--- a/Views/Tablero/Create.cshtml
+++ b/Views/Tablero/Create.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "Crear tablero";
+}
+
 @model ViewModels.CreateTableroViewModels;
 
 <div class="border border-primary border-3 p-3 rounded contenedor-form">
