--- a/Views/Tarea/AllTareas.cshtml
+++ b/Views/Tarea/AllTareas.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Tareas";
+    ViewData["Title"] = "Todas las tareas";
 }
 
 @model ViewModels.TareasByUsuarioViewModels;
