--- a/Views/Tarea/Warning.cshtml
+++ b/Views/Tarea/Warning.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "Advertencia";
+}
+
 <div class="contenedor">
     <h2>Advertencia</h2>
     <p>Para poder crear una tarea, debes añadilar a un tablero, y aun no creaste tus tableros.</p>
