--- a/Views/TareasByTablero/TareasAsignadasByTablero.cshtml
+++ b/Views/TareasByTablero/TareasAsignadasByTablero.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Tareas por tablero";
+    ViewData["Title"] = "Tareas asignadas";
 }
 
 @model ViewModels.TareasAsignadasByTablero;
