--- a/Views/TareasByTablero/UpdateTarea.cshtml
+++ b/Views/TareasByTablero/UpdateTarea.cshtml
@@ -1,3 +1,6 @@
+@{
+    ViewData["Title"] = "TModificar tarea";
+}
 @model ViewModels.UpdateTareaViewModels;
 
 <div class="border border-primary border-3 p-3 rounded contenedor-form">
