--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Usuarios";
+    ViewData["Title"] = "Mi usuario";
     bool IsAdmin = Context.Request.HttpContext.Session.GetString("Rol") == "admin";
 }
 
