--- a/Views/Tablero/Update.cshtml
+++ b/Views/Tablero/Update.cshtml
@@ -1,3 +1,7 @@
+@{
+    ViewData["Title"] = "Modificar tablero";
+}
+
 @model ViewModels.UpdateTableroViewModels;
 
 <div class="border border-primary border-3 p-3 rounded contenedor-form">
