--- a/Views/Tarea/Create.cshtml
+++ b/Views/Tarea/Create.cshtml
@@ -1,3 +1,6 @@
+@{
+    ViewData["Title"] = "Crear tarea";
+}
 @model ViewModels.CreateTareaViewModels;
 
 <div class="border border-primary border-3 p-3 rounded contenedor-form">
