--- a/Views/Tarea/Update.cshtml
+++ b/Views/Tarea/Update.cshtml
@@ -1,3 +1,6 @@
+@{
+    ViewData["Title"] = "Modificar tarea";
+}
 @model ViewModels.UpdateTareaViewModels;
 
 <div class="border border-primary border-3 p-3 rounded contenedor-form">
